// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChopLogicTextInput > should render the input correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-knesRu keCzej test-class"
  >
    <div
      class="sc-dnaUSb jaNZzJ"
    >
      <label
        class="sc-gnpbhQ jropmu"
        for="test-input-id"
      >
        <span
          class="sc-la-DxNn hspnBd"
        >
          Test Input:
        </span>
      </label>
      <input
        aria-errormessage="test-input-id_error"
        aria-invalid="false"
        autocomplete="off"
        class="sc-kkmypM fJXpTS"
        id="test-input-id"
        name="test"
        placeholder="Enter text here..."
        type="text"
        value=""
      />
      <button
        aria-label="Clear the input for Test Input:"
        class="sc-dsLQwm jaJwgx"
        type="button"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 64 64"
          width="1em"
        >
          <path
            d="M18.947 17.153l26.098 25.903M19.045 43.153l25.902-26.097"
            fill="none"
            stroke="currentColor"
            stroke-miterlimit="10"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
    <span
      class="sc-iKTcqh hluVZ"
      id="test-input-id_error"
    >
      Invalid input
    </span>
  </div>
</DocumentFragment>
`;

exports[`ChopLogicTextInput > should render the required input correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-knesRu keCzej test-class"
  >
    <div
      class="sc-dnaUSb jaNZzJ"
    >
      <label
        class="sc-gnpbhQ jropmu"
        for="test-input-id"
      >
        <span
          class="sc-la-DxNn hspnBd"
        >
          Test Input:
        </span>
        <abbr
          class="sc-iCZwEW bFhLBv"
          title="required"
        >
          *
        </abbr>
      </label>
      <input
        aria-errormessage="test-input-id_error"
        aria-invalid="false"
        autocomplete="off"
        class="sc-kkmypM fJXpTS"
        id="test-input-id"
        name="test"
        placeholder="Enter text here..."
        required=""
        type="text"
        value=""
      />
      <button
        aria-label="Clear the input for Test Input:"
        class="sc-dsLQwm jaJwgx"
        type="button"
      >
        <svg
          fill="currentColor"
          height="1em"
          viewBox="0 0 64 64"
          width="1em"
        >
          <path
            d="M18.947 17.153l26.098 25.903M19.045 43.153l25.902-26.097"
            fill="none"
            stroke="currentColor"
            stroke-miterlimit="10"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
    <span
      class="sc-iKTcqh hluVZ"
      id="test-input-id_error"
    >
      Invalid input
    </span>
  </div>
</DocumentFragment>
`;
